# ral

./: Cargo.toml  GEMINI.md  Makefile  README.md  build.sh  test_parser.rs
examples/riscv/: mcause.ral  mie.ral  mip.ral  mstatus.ral  mstatus_rv32.ral  mtvec.ral  satp.ral
src/: ast.rs  cli.rs  lib.rs  parser.rs
src/codegen/: c.rs  mod.rs  rust.rs
testdata/: fail.ral  simple.ral
testdata/errors/: missing_field_colon.ral  missing_field_size.ral  missing_register_colon.ral  missing_register_size.ral  typo_config.ral  typo_register.ral  typo_restricted.ral
