[package]
name = "ral"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true 
lto = true 
codegen-units = 1 
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "0.8.0"
clap = {version="3.2.20", features=["derive"]}
ariadne = "0.1.5"
